--- a/OEBPS/Text/c028.xhtml
+++ b/OEBPS/Text/c028.xhtml
@@ -23,9 +23,9 @@
     <p>如果这个世界的计算是十二进制的话，应该还有需要学习的东西吧，但是不巧的是采用了十进制。这样的话梅赛德斯什么都学不到。</p>
     <p>但是，另一方面，在历史和魔法课上得到的东西对梅赛德斯来说今后也有很大的帮助。</p>
     <p>因此综合地考虑，可以说在学园的日常生活大致充实。</p>
-    <p>“那么，今天就告诉大家红行星的成立。</p>
-    <p>据说从现在开始2万年前，这个世界不是生物能住的环境。</p>
-    <p>但是在那里，从伊甸园神明来，创造了这个世界。然后这个世界就变得能住生物了”</p>
+    <p>“<span class="character">那么，今天就告诉大家红行星的成立。</span></p>
+    <p><span class="character">据说从现在开始2万年前，这个世界不是生物能住的环境。</span></p>
+    <p><span class="character">但是在那里，从伊甸园神明来，创造了这个世界。然后这个世界就变得能住生物了</span>”</p>
     <p>那天的第一堂课是历史。</p>
     <p>担任A班的古斯塔夫在讲台上讲述这个世界的成立。</p>
     <p>梅赛德斯听了他的话，心里很复杂。</p>
@@ -35,8 +35,8 @@
     <p>从火星上看到的地球应该没有那么大。</p>
     <p>那么这个世界到底是什么呢……疑问无穷。</p>
     <p>“<span class="character">老师，那么现在伊甸园里还有神明住着吗？</span>”</p>
-    <p>“不……据说是神同胞互相争斗，用“神之火”毁灭了彼此。</p>
-    <p>但是，他却是居住在那种球体之上，拥有能穿越天空来到这个世界的力量。说不定还有在伊甸园生活的神”</p>
+    <p>“<span class="character">不……据说是神同胞互相争斗，用“神之火”毁灭了彼此。</span></p>
+    <p><span class="character">但是，他却是居住在那种球体之上，拥有能穿越天空来到这个世界的力量。说不定还有在伊甸园生活的神</span>”</p>
     <p>“<span class="character">这么厉害的神，居然灭绝了？</span>”</p>
     <p>“<span class="character">就算再怎么有神，也无法忍受同一个神所使用的火吧。毁灭神灵也是神</span>”</p>
     <p>一边听着古斯塔夫回答学生的提问，一边思考着梅赛德斯。</p>
@@ -44,9 +44,9 @@
     <p>如果只是互相殴打，致死的可能性很低。可能会受重伤。</p>
     <p>但是如果持刃成为互相杀戮，如果聚集数成为战争。</p>
     <p>如果用剑和火绳枪程度的武器作战的话不会导致灭亡，但是如果变成战车、战斗机、导弹的话，受害就会增加，而且威力再提高的话，等待的只有自灭。</p>
-    <p>“降落到这片土地上的神们模仿自己的样子创造了智慧的生物。</p>
-    <p>那就是法鲁什，我们吸血鬼也是法鲁什的一种。</p>
-    <p>另外，众神从伊甸园带入生物的种子，在这个世界创造出了多种多样的生物”</p>
+    <p>“<span class="character">降落到这片土地上的神们模仿自己的样子创造了智慧的生物。</span></p>
+    <p><span class="character">那就是法鲁什，我们吸血鬼也是法鲁什的一种。</span></p>
+    <p><span class="character">另外，众神从伊甸园带入生物的种子，在这个世界创造出了多种多样的生物</span>”</p>
     <p>梅赛德斯一边想着简直就是诺亚方舟，一边在手边的羊皮纸上写了下来。</p>
     <p>历史课可以学到的东西很多。想来并不是全部都是事实，到了后世也有被夸张或是随意附加的东西，尽管如此，如果学习了历史，总觉得能看到世界的整体形象。</p>
     <p>战学也有很多有趣的东西。</p>
