--- a/OEBPS/Text/c029.xhtml
+++ b/OEBPS/Text/c029.xhtml
@@ -24,19 +24,19 @@
     <p>从某种意义上来说，可以说所有的人都没有看过吉克哈特。</p>
     <p>吉克哈特被大家包围着。但是他很孤独。</p>
     <p class="divline"></p>
-    <p>“在战斗中，是否服从魔物的差别很大。</p>
-    <p>如果有遵从命令的魔物的话，数量会单纯增加，但是也有只有魔物才能完成的事情。</p>
-    <p>如果是脚快的魔物的话，可以代替交通工具，如果是能飞的人也可以用来侦察。乘着魔物从空中狙击也是有效的。</p>
-    <p>在战场上，大多数优秀的士兵都带着魔物”</p>
+    <p>“<span class="character">在战斗中，是否服从魔物的差别很大。</span></p>
+    <p><span class="character">如果有遵从命令的魔物的话，数量会单纯增加，但是也有只有魔物才能完成的事情。</span></p>
+    <p><span class="character">如果是脚快的魔物的话，可以代替交通工具，如果是能飞的人也可以用来侦察。乘着魔物从空中狙击也是有效的。</span></p>
+    <p>在<span class="character">战场上，大多数优秀的士兵都带着魔物</span>”</p>
     <p>那天的战学是实地训练。</p>
     <p>地点不是教室，而是离学校稍微远一点的平原。</p>
     <p>在那里古斯塔夫说明了在学生们面前捕获魔物的优点。</p>
-    <p>“魔物有用的不仅仅是战斗。</p>
-    <p>如果能自由地操纵适合移动的魔物的话，在从事运输和送货等的工作时有利地工作。</p>
-    <p>有力量的魔物的话可以用来磨粉吧。</p>
-    <p>也有利用魔物特有的能力吃大道艺的人。</p>
-    <p>如果是能使用水魔法的魔物的话，应该会成为消防的可靠伙伴。</p>
-    <p>虽然现在我举的只是一个例子，但只要跟随魔物的话那也是很大的帮助”</p>
+    <p>“<span class="character">魔物有用的不仅仅是战斗。</span></p>
+    <p><span class="character">如果能自由地操纵适合移动的魔物的话，在从事运输和送货等的工作时有利地工作。</span></p>
+    <p><span class="character">有力量的魔物的话可以用来磨粉吧。</span></p>
+    <p><span class="character">也有利用魔物特有的能力吃大道艺的人。</span></p>
+    <p><span class="character">如果是能使用水魔法的魔物的话，应该会成为消防的可靠伙伴。</span></p>
+    <p><span class="character">虽然现在我举的只是一个例子，但只要跟随魔物的话那也是很大的帮助</span>”</p>
     <p>梅赛德斯小声地点了点头，说，这简直就是古斯塔夫的说明。</p>
     <p>如果使用魔物的话，只会使思考飞到战斗中去，但是没有必要让其战斗。</p>
     <p>即使不是那样，多种多样的魔物充分地有使用途径。</p>
@@ -46,23 +46,23 @@
     <p>并且，每迷宫都保有那样的魔物，并且无论多少量产能是现在的梅赛德斯。</p>
     <p>如果有那个心意，大概的事能了吧。</p>
     <p>正因为如此，面对坏事时的恐怖是无法估量的。</p>
-    <p>“魔物可以在商店等地方买到，但是被人让出的魔物很难让人怀念。</p>
-    <p>这是因为跟随强者的魔物的本能有关系。</p>
-    <p>被别人让出的魔物怀疑饲主的强大，判断为与自己的主不相符就会变得反抗。</p>
-    <p>一眼就能认可魔物的强度是没有问题的，但是现在的你们很难做到吧”</p>
+    <p>“<span class="character">魔物可以在商店等地方买到，但是被人让出的魔物很难让人怀念。</span></p>
+    <p><span class="character">这是因为跟随强者的魔物的本能有关系。</span></p>
+    <p><span class="character">被别人让出的魔物怀疑饲主的强大，判断为与自己的主不相符就会变得反抗。</span></p>
+    <p><span class="character">一眼就能认可魔物的强度是没有问题的，但是现在的你们很难做到吧</span>”</p>
     <p>在这里古斯塔夫见过一次梅赛德斯和吉克哈特。</p>
     <p>在这之中购买的魔物也没有问题地快要能处理的是这两个人,不过，Gusutafu硬要说那个没做。</p>
     <p>避免了学生之间产生差距和摩擦这样的说法。</p>
-    <p>“所以这次你们要挑战捕获魔物。</p>
-    <p>预计一月后将与捕获的魔物们进行模拟战。</p>
-    <p>一月能听到多少魔物说的话，站在上面的人能得到适当的证明。</p>
-    <p>当然，没有抓住魔物的家伙留下了。以心相待”</p>
+    <p>“<span class="character">所以这次你们要挑战捕获魔物。</span></p>
+    <p><span class="character">预计一月后将与捕获的魔物们进行模拟战。</span></p>
+    <p><span class="character">一月能听到多少魔物说的话，站在上面的人能得到适当的证明。</span></p>
+    <p><span class="character">当然，没有抓住魔物的家伙留下了。以心相待</span>”</p>
     <p>对于梅赛德斯来说，这堂课只能算是简易模式。</p>
     <p>曾经有过捕获魔物的经验。</p>
     <p>更不用说这次，从许可学生的进入的事考虑这个平原的魔物的水平低也可以看。</p>
     <p>对于梅赛德斯来说，只能是一眼瞪着让他丧失斗志的对手吧。</p>
-    <p>“捕获的时候，请使用这个魔石。</p>
-    <p>这家伙装有镇压魔物用的魔法，只要是这个平原上出现的魔物程度就能无力化了吧”</p>
+    <p>“<span class="character">捕获的时候，请使用这个魔石。</span></p>
+    <p><span class="character">这家伙装有镇压魔物用的魔法，只要是这个平原上出现的魔物程度就能无力化了吧</span>”</p>
     <p>古斯塔夫理所当然地拿出了它，梅赛德斯也略微佩服。</p>
     <p>貌似封石不会出现，但根据使用方法的不同，魔石也可以代替。</p>
     <p>里面蕴含着怎样的魔法，非常有意思，但是这是使用之后的乐趣吗？</p>
