--- a/OEBPS/Text/c030.xhtml
+++ b/OEBPS/Text/c030.xhtml
@@ -25,8 +25,8 @@
     <p>幸好只是擦了一件衣服，看不到受伤…………不，等一下。总觉得有点奇怪。</p>
     <p>但是深入到那里之后呢。每个人都有不想被碰触的秘密。</p>
     <p>梅赛德斯把学园支付的剑放在肩上，硬要无视现在看到的东西向吉克哈特打招呼。</p>
-    <p>“巡回演唱会的王子。想确认一下，你有捕获那个魔物的意思吗？</p>
-    <p>如果打算的话，我就这样离开吧”</p>
+    <p>“<span class="character">巡回演唱会的王子。想确认一下，你有捕获那个魔物的意思吗？</span></p>
+    <p><span class="character">如果打算的话，我就这样离开吧</span>”</p>
     <p>不可横夺猎物，绝对。</p>
     <p>不管那个魔物是什么，现在是捕获魔物的授课中，吉克哈特也有使之成为可能的技能。</p>
     <p>所以如果他想捕获那个的话，梅赛德斯出手只是一种抢劫行为。</p>
@@ -39,7 +39,7 @@
     <p>那么，就没有必要客气了吧。确实，他说现在不需要了。</p>
     <p>梅赛德斯向前迈出一步，与此同时，大鹫一次向天空躲避。</p>
     <p>是个直觉很好的魔物。虽然没有战斗，但梅赛德斯本能地察觉到对方是不能掉以轻心的对手。</p>
-    <p>“你在干什么！那不是普通的魔物。</p>
+    <p>“<span class="character">你在干什么！那不是普通的魔物。</span></p>
     <p>恐怕是瞄准我生命的刺客派来的魔物吧。</p>
     <p>不然的话，这样的地方怎么会有阿修塔尔呢！”</p>
     <p>据说魔物的名字叫阿修塔尔。</p>
@@ -63,7 +63,7 @@
     <p>阿修塔尔在空中盘旋，再次向梅赛德斯袭击。</p>
     <p>这次硬化到能看见翅膀的那样硬化，阿修塔尔自己与锐利的刃化做突入了。</p>
     <p>机动力、攻击力都无可挑剔。只是，相性太坏了。</p>
-    <p>“《ドルック》</p>
+    <p>“<span class="character">《ドルック》</span></p>
     <p>宣言魔法名，对阿修塔尔施加局部性的重压摔落了到地面。</p>
     <p>无论怎样逆着重力飞翔的鸟，被施加了无法飞翔的重压也是无可奈何的吧。</p>
     <p>梅赛德斯一只手保持着重压，另一只手玩弄魔石。</p>
