--- a/OEBPS/Text/c031.xhtml
+++ b/OEBPS/Text/c031.xhtml
@@ -52,11 +52,11 @@
     <p>对应盐。不愧是梅赛德斯的父亲。</p>
     <p>因为没办法，梅赛德斯在上课放假的时候逃出学园，用魔法飞回了宅邸。</p>
     <p class="divline"></p>
-    <p>“也许是向王家出卖恩情的机会。</p>
-    <p>即使不是这样，假冒的愚蠢之物装作王存在于我们之上的心情也不是很好。</p>
-    <p>梅赛德斯啊，暂时注意一下那个影武者的周围。然后活捉袭击她的家伙，把情报吐出来。</p>
-    <p>如果那个家伙是真正的公主，那也许是拉王家血的最后一个人。</p>
-    <p>断绝王家的血液关系到奥尔克斯的战力下降……必须避免”</p>
+    <p>“<span class="character">也许是向王家出卖恩情的机会。</span></p>
+    <p><span class="character">即使不是这样，假冒的愚蠢之物装作王存在于我们之上的心情也不是很好。</span></p>
+    <p><span class="character">梅赛德斯啊，暂时注意一下那个影武者的周围。然后活捉袭击她的家伙，把情报吐出来。</span></p>
+    <p><span class="character">如果那个家伙是真正的公主，那也许是拉王家血的最后一个人。</span></p>
+    <p><span class="character">断绝王家的血液关系到奥尔克斯的战力下降……必须避免</span>”</p>
     <p>“<span class="character">战力下降，是吗？</span>”</p>
     <p>梅赛德斯想，这很奇怪。</p>
     <p>的确，吉克哈特的剑技很棒，但即使如此，作为个人来说也只是优秀而已。</p>
@@ -68,29 +68,29 @@
     <p>听了伯恩哈特的故事，梅赛德斯无意识地触摸了口袋里的钥匙。</p>
     <p>果然，好像也有人知道真相。</p>
     <p>这恐怕是普通人不知道的绝密情报吧，但即便如此，如果是格鲁内瓦特家当主的话，似乎也能得到一般情况下无法得到的信息。</p>
-    <p>“以真意攻下迷宫的人，将被赋予迷宫本身。</p>
-    <p>量产魔物、量产道具、单独拥有一国军队的巨大力量……但是，这是极其困难的，在历史上也仅有的”</p>
+    <p>“<span class="character">以真意攻下迷宫的人，将被赋予迷宫本身。</span></p>
+    <p><span class="character">量产魔物、量产道具、单独拥有一国军队的巨大力量……但是，这是极其困难的，在历史上也仅有的</span>”</p>
     <p>“<span class="character">军队是……不，在军队里没有办法吗？</span>”</p>
-    <p>“恩。听说过去有过几次这样的尝试。</p>
-    <p>但是迷宫基本上不适合集体攻略。绝对不宽广的密封空间索隆试着进入。</p>
-    <p>是具有范围攻击的魔物的好鸭子。</p>
-    <p>如果谁引起恐慌那个传染，我方妨碍满足作战的事也能吧。</p>
-    <p>对迷宫攻略物量责备相通。必要的是突出的个体力量”</p>
+    <p>“<span class="character">恩。听说过去有过几次这样的尝试。</span></p>
+    <p><span class="character">但是迷宫基本上不适合集体攻略。绝对不宽广的密封空间索隆试着进入。</span></p>
+    <p><span class="character">是具有范围攻击的魔物的好鸭子。</span></p>
+    <p><span class="character">如果谁引起恐慌那个传染，我方妨碍满足作战的事也能吧。</span></p>
+    <p><span class="character">对迷宫攻略物量责备相通。必要的是突出的个体力量”</span></p>
     <p>在狭小的地方集体变得不利。</p>
     <p>这是战斗的常识。</p>
     <p>在地球上，由于以数量取胜的军队被诱入狭窄的场所而败给少数敌人的记录也大量地残留着。</p>
     <p>正因为是身材矮小的梅赛德斯，所以不在意迷宫的狭窄，只能战斗，如果是大人的话，就只有四人并排的程度堵塞了道路。</p>
     <p>迷宫就是如此密闭的空间。</p>
-    <p>“而拥有较高实力的人往往具有比例较高的社会地位和名誉。</p>
-    <p>没有必要特意犯下那样的人身安全。</p>
-    <p>而迷宫大多是支撑城市经济的。</p>
-    <p>像我这样的地位，反而是攻略所产生的缺点更大”</p>
+    <p>“<span class="character">而拥有较高实力的人往往具有比例较高的社会地位和名誉。</span></p>
+    <p><span class="character">没有必要特意犯下那样的人身安全。</span></p>
+    <p><span class="character">而迷宫大多是支撑城市经济的。</span></p>
+    <p><span class="character">像我这样的地位，反而是攻略所产生的缺点更大”</span></p>
     <p>这和暗中说如果自己可以攻略迷宫是一样的。</p>
     <p>非常自信。</p>
     <p>“<span class="character">那么斯塔克迷宫是……</span>”</p>
-    <p>“嗯，是重伤啊。但是那是近年来出现的迷宫。</p>
-    <p>支撑这个城市的是以前就有的plactisu迷宫。</p>
-    <p>虽然很可惜，但是考虑到原来没有的东西已经没有了，就没有问题了”</p>
+    <p>“<span class="character">嗯，是重伤啊。但是那是近年来出现的迷宫。</span></p>
+    <p><span class="character">支撑这个城市的是以前就有的plactisu迷宫。</span></p>
+    <p><span class="character">虽然很可惜，但是考虑到原来没有的东西已经没有了，就没有问题了”</span></p>
     <p>“<span class="character">如果plactisu迷宫被攻略了的话？</span>”</p>
     <p>“<span class="character">不要担心，梅赛德斯。这是绝对不可能的・・・</span>”</p>
     <p>梅赛德斯对父亲的话感到不协调。</p>
@@ -99,9 +99,9 @@
     <p>但是，我不能断言没有被攻略的理由。</p>
     <p>难道是让饲养小狗的士兵在里面待机，杀死了通关的seeker吗？</p>
     <p>如果是这个父亲，为了支撑城市的经济，似乎能做到那种程度。</p>
-    <p>“把话说回来……说到攻略迷宫需要突出的个。</p>
-    <p>并且如果以少数的实力者攻略了，那时谁把迷宫做为手纠纷吧。</p>
-    <p>最糟糕，有可能互相残杀”</p>
+    <p>“<span class="character">把话说回来……说到攻略迷宫需要突出的个。</span></p>
+    <p><span class="character">并且如果以少数的实力者攻略了，那时谁把迷宫做为手纠纷吧。</span></p>
+    <p><span class="character">最糟糕，有可能互相残杀</span>”</p>
     <p>梅赛德斯默默地点头，面对重新判明的迷宫的恶劣，脸上皱起了眉头。</p>
     <p>为了阻止集团的攻略而狭窄，如果气息断绝地走到最下层的话，就会被逼着无风险获得宝物的两种选择。</p>
     <p>也就是说，即使是到了最底层的实力者，在这儿大半都被甩掉，再也无法向真实挑战了。</p>
@@ -112,12 +112,12 @@
     <p>因为是名誉也不是什么都有的底边开始不考虑保身，我方只自己捕获了的魔物。</p>
     <p>由于5年的鲁莽修行基本规格也提高，知道重力这个概念的有利其他的吸血鬼拉开了。</p>
     <p>因为是那样的她，那样容易地完成了的。</p>
-    <p>“把话说回来。</p>
-    <p>作为第一代奥尔克斯王的阿本特罗一世将那个迷宫做为剑的形式保有。</p>
-    <p>只有国王能使用的王剑，是绝对不会破碎的不可思议的金属制成，给予了他坚定的力量和地位。</p>
-    <p>于是，他凭借这股力量成为国王，打造了现在的奥尔克斯的基础。</p>
-    <p>然后……只有继承了成就者血统的人才能继承迷宫。</p>
-    <p>功能好像被限制了一些呢……”</p>
+    <p>“<span class="character">把话说回来。</span></p>
+    <p><span class="character">作为第一代奥尔克斯王的阿本特罗一世将那个迷宫做为剑的形式保有。</span></p>
+    <p><span class="character">只有国王能使用的王剑，是绝对不会破碎的不可思议的金属制成，给予了他坚定的力量和地位。</span></p>
+    <p><span class="character">于是，他凭借这股力量成为国王，打造了现在的奥尔克斯的基础。</span></p>
+    <p><span class="character">然后……只有继承了成就者血统的人才能继承迷宫。</span></p>
+    <p><span class="character">功能好像被限制了一些呢……</span>”</p>
     <p>梅赛德斯重新认识到，自己现在所拥有的东西是不可思议的。</p>
     
 </body>
