--- a/OEBPS/Text/c035.xhtml
+++ b/OEBPS/Text/c035.xhtml
@@ -25,9 +25,9 @@
     <p>宿舍的自己房间不行。汉娜接近黑色的现在，不知道在安装什么。</p>
     <p>这个世界的科学水平，窃听器之类的东西并不存在，但毕竟是拥有魔法的世界。</p>
     <p>自己有想象不到的好工具的可能性并不是零。</p>
-    <p>“然后……所谓话是？</p>
+    <p>“<span class="character">然后……所谓话是？</span></p>
     <p>“<span class="character">前几天和瞄准你的一派交战了</span>”</p>
-    <p>“！？那，然后呢……没事吧？受伤了吗？</p>
+    <p>“<span class="character">！？那，然后呢……没事吧？受伤了吗？</span></p>
     <p>“<span class="character">没问题。比起那个，能从那个中的一人听出有用的信息。内容就是这样……</span>”</p>
     <p>梅赛德斯对吉克哈特说了前几天得到的情报。</p>
     <p>瞄准吉克哈特的人的原形是贝亚克里斯帝国和什么的刺客的事。</p>
@@ -75,9 +75,9 @@
     <p>没有前进的意志的人，是无法开辟道路的。</p>
     <p>只有继续前进的道路。</p>
     <p>“<span class="character">我带你去。不管有什么障碍，我都会砍倒</span>”</p>
-    <p>“但是！你没有做到那种地步的优点！</p>
-    <p>假设这是真的，你何必冒险到那种地步！</p>
-    <p>为什么，会做到那种程度呢！”</p>
+    <p>“<span class="character">但是！你没有做到那种地步的优点！</span></p>
+    <p><span class="character">假设这是真的，你何必冒险到那种地步！</span></p>
+    <p><span class="character">为什么，会做到那种程度呢！</span>”</p>
     <p>“<span class="character">这个国家很荒芜，学园里总是有奇怪的家伙，对我来说有害。</span></p>
     <p><span class="character">如果国家安定，学园能和平，那对我来说是很有利的。</span></p>
     <p><span class="character">不该做的事赶快解决，专心致志地做学业</span>”</p>
