--- a/OEBPS/Text/c036.xhtml
+++ b/OEBPS/Text/c036.xhtml
@@ -37,8 +37,8 @@
     <p>作为弃棋被砍掉，作为头脑奇怪的犯罪者被处理掉落。</p>
     <p>如果要将现在王家的罪行表露出来，就需要更确切的证据。</p>
     <p>“<span class="character">然后……果然现在的王家是虚假的吧？</span>”</p>
-    <p>“是的。新王派希望成为障碍的吉克林德公主的死，向他国好象卖了信息。</p>
-    <p>的确……贝亚特里克斯帝国什么的”</p>
+    <p>“<span class="character">是的。新王派希望成为障碍的吉克林德公主的死，向他国好象卖了信息。</span></p>
+    <p><span class="character">的确……贝亚特里克斯帝国什么的</span>”</p>
     <p>“<span class="character">真是和我国并列的吸血鬼大国啊。据说第一代女帝贝阿朵里克斯称霸了迷宫，建立了国家。</span></p>
     <p><span class="character">如果奥克思体弱化，不久被那个国家吸收的事吧。</span></p>
     <p><span class="character">即便如此，为了自己的地位而出卖国家，还是……这个必须赶紧去除。</span></p>
