--- a/OEBPS/Text/c039.xhtml
+++ b/OEBPS/Text/c039.xhtml
@@ -120,10 +120,10 @@
     <p>不问情况就不爽快。</p>
     <p>“<span class="character">我也知道我是旧王派。11年前王子迎来新妃，突然王子多了吧。那时候我们就想着‘啊，这个被王家劫走了啊’开始潜入调查了哟</span>”</p>
     <p>“<span class="character">嗯。果然行动真快啊</span>”</p>
-    <p>“那我也钻进城里，不管怎样要让他们满意才行。</p>
-    <p>嘛，反正对方是个小人物。稍微满足自尊心一边做，如果操作心证进入简单。</p>
-    <p>第五年信赖，连种种的背面信息流利地说了哟。</p>
-    <p>如何赢得上一代王的信赖，知道被骗的时候王妃的脸是杰作”</p>
+    <p>“<span class="character">那我也钻进城里，不管怎样要让他们满意才行。</span></p>
+    <p><span class="character">嘛，反正对方是个小人物。稍微满足自尊心一边做，如果操作心证进入简单。</span></p>
+    <p><span class="character">第五年信赖，连种种的背面信息流利地说了哟。</span></p>
+    <p><span class="character">如何赢得上一代王的信赖，知道被骗的时候王妃的脸是杰作</span>”</p>
     <p>听了汉娜的话，在梅赛德斯中对上一代王的评价一下子下降了。</p>
     <p>虽然没见过面，但我知道没有看人的眼光。</p>
     <p>信赖那样的小东西之类的，怎么着？</p>
