--- a/OEBPS/Text/c041.xhtml
+++ b/OEBPS/Text/c041.xhtml
@@ -73,8 +73,8 @@
     <p>后来你，不知不觉就升格为厨师长了。</p>
     <p>“<span class="character">算了，算了。那家伙待会儿再领回去，还有更应该做的事</span>”</p>
     <p>“<span class="character">……这是国王一家的处分吧？</span>”</p>
-    <p>“啊。他们侮辱了王家。也就是说，这等于侮辱了侍奉王家的我们。</p>
-    <p>只是处刑太温和。他们的罪孽就由他们自己来赎吧”</p>
+    <p>“<span class="character">啊。他们侮辱了王家。也就是说，这等于侮辱了侍奉王家的我们。</span></p>
+    <p><span class="character">只是处刑太温和。他们的罪孽就由他们自己来赎吧</span>”</p>
     <p>伯恩哈特冷淡地说，走出房间。</p>
     <p>那个侧脸被冷彻的凶相扭曲着。</p>
     <p class="divline"></p>
