--- a/OEBPS/Text/c042.xhtml
+++ b/OEBPS/Text/c042.xhtml
@@ -89,9 +89,9 @@
     <p>那其他无法靠近的力量。据说执事看了一次的铠甲的魔物和黑的狼。</p>
     <p>消失的斯塔克迷宫。</p>
     <p>全部，以理想以上的状态一致。符号恰好吻合。</p>
-    <p>“好……好啊……真好……！</p>
-    <p>流水来了……时代的潮流……。</p>
-    <p>这样下去的话，也许能将三个迷宫团结成一股力量”</p>
+    <p>“<span class="character">好……好啊……真好……！</span></p>
+    <p><span class="character">流水来了……时代的潮流……。</span></p>
+    <p><span class="character">这样下去的话，也许能将三个迷宫团结成一股力量</span>”</p>
     <p>梅赛德斯有不知道的事。</p>
     <p>那就是迷宫的所有者如果死在没有后继者的状态下会怎样。</p>
     <p>那个场合迷宫成为未攻略的状态，在哪里复活。</p>
