--- a/OEBPS/Text/c044.xhtml
+++ b/OEBPS/Text/c044.xhtml
@@ -56,8 +56,8 @@
     <p>发型是短发，脸部整齐，身高170厘米左右。</p>
     <p>乍一看给人一种清爽的好青年的印象。</p>
     <p>“<span class="character">你呢？</span>”</p>
-    <p>“我是盖茨·赫尔德林。6年级学生，《雷鸣》的派系……哎呀，干部那样的东西在做。</p>
-    <p>直截了当地说，小姐，要不要加入我们的派系？”</p>
+    <p>“<span class="character">我是盖茨·赫尔德林。6年级学生，《雷鸣》的派系……哎呀，干部那样的东西在做。</span></p>
+    <p><span class="character">直截了当地说，小姐，要不要加入我们的派系？</span>”</p>
     <p>“<span class="character">……派系？</span>”</p>
     <p>“<span class="character">啊，这样啊。OKOK，哥哥会给你解释的</span>”</p>
     <p>自称盖茨·赫尔德林的男子爽朗地笑，显示了回答梅赛德斯疑问的姿势。</p>
