--- a/OEBPS/Text/c047.xhtml
+++ b/OEBPS/Text/c047.xhtml
@@ -54,8 +54,8 @@
     <p>“<span class="character">你不能这么做。家名也继承不了。</span></p>
     <p><span class="character">这会成为你如此可怜的力量</span>”</p>
     <p>“<span class="character">……这叫火柴泵</span>”</p>
-    <p>“这是理所当然的。但是，你却有足够的理由伸出手。</p>
-    <p>至少周围人会认为是因为你的暴走吧”</p>
+    <p>“<span class="character">这是理所当然的。但是，你却有足够的理由伸出手。</span></p>
+    <p><span class="character">至少周围人会认为是因为你的暴走吧</span>”</p>
     <p>身着白衣的男人笑了。</p>
     <p>我确信了这句话。这个男人从一开始就不征求菲利克斯的同意。</p>
     <p>重要的是周围的人怎么想。</p>
@@ -118,11 +118,11 @@
     <p>准确地狙击了还持续飞行的白装束剩下的一只脚，夺取了机动力。</p>
     <p>“<span class="character">汉娜。为什么那只兔子拿着枪呢？</span>”</p>
     <p>“<span class="character">因为想要什么，就给她吧，她的本领真不错……</span>”</p>
-    <p>“现场识别名‘邮件夹哈泽’。擅长使用武器的兔型魔物。</p>
-    <p>空手的战斗能力是杂鱼,不过，是到刀，钝器，弓，枪器为止全部的武器熟练使用，只是握住一把刀等级很大地变动的新奇的种类。</p>
-    <p>由于“Dearaiehaze”只能在众多战斗中生存，所以突发进化，时不时地在洞窟的浅层和只有弱小魔物的平原上出现，导致疏忽大意的seeker等全部毁灭。</p>
-    <p>同时，因为讨厌被密闭了的空间进化同时从迷宫外边出来了对迷宫的登记被认为是极为困难。</p>
-    <p>根据持有的武器强度变动,不过，让持枪的时候的危险度超过阿修塔尔”</p>
+    <p>“<span class="character">现场识别名‘邮件夹哈泽’。擅长使用武器的兔型魔物。</span></p>
+    <p><span class="character">空手的战斗能力是杂鱼,不过，是到刀，钝器，弓，枪器为止全部的武器熟练使用，只是握住一把刀等级很大地变动的新奇的种类。</span></p>
+    <p><span class="character">由于“Dearaiehaze”只能在众多战斗中生存，所以突发进化，时不时地在洞窟的浅层和只有弱小魔物的平原上出现，导致疏忽大意的seeker等全部毁灭。</span></p>
+    <p><span class="character">同时，因为讨厌被密闭了的空间进化同时从迷宫外边出来了对迷宫的登记被认为是极为困难。</span></p>
+    <p><span class="character">根据持有的武器强度变动,不过，让持枪的时候的危险度超过阿修塔尔</span>”</p>
     <p>小兔子装填下个子弹，瞄准倒下的白衣发射了。</p>
     <p>脚的下面是胳膊。瞬间射穿四肢使其无力化，作为胜利后的一支，向汉娜求火。</p>
     <p>好像希望雪茄上点火。</p>
