--- a/OEBPS/Text/c049.xhtml
+++ b/OEBPS/Text/c049.xhtml
@@ -75,7 +75,7 @@
     <p>然后看看周围，不可思议的是，其他教员好像没有来。</p>
     <p>看来是汉娜错看了人。</p>
     <p>“<span class="character">我知道帝国的目标是公主。把伊扎克演成反派角色，让她就任王位，这样的事情也是有的</span>”</p>
-    <p>“……直接问的吗？</p>
+    <p>“<span class="character">……直接问的吗？</span></p>
     <p>“<span class="character">对了。特意出现在我面前，不许打扰我了</span>”</p>
     <p>原来如此，汉娜这样想。</p>
     <p>确实，从帝国的角度来看，学院里最麻烦的就是古斯塔夫。</p>
@@ -83,8 +83,8 @@
     <p>如果要试图暗杀之类的话，会遭到反击，而且会把古斯塔夫完全当成敌人。</p>
     <p>但是被说不要涉及到，是吗跟随，也是可笑的话。</p>
     <p>“<span class="character">所以真的没有打扰……这么说也不奇怪吗？</span>”</p>
-    <p>“对我来说哪边都行。</p>
-    <p>如果帝国的策略顺利的话，这个国家实际上就是帝国的旗下，同时也会得到帝国这个后盾。</p>
+    <p>“<span class="character">对我来说哪边都行。</span></p>
+    <p><span class="character">如果帝国的策略顺利的话，这个国家实际上就是帝国的旗下，同时也会得到帝国这个后盾。</span></p>
     <p>从对等的敌人上下分开了的朋友，在象伯恩哈特一样的人看来不有趣吧,不过，对于象我这样只能战斗的男人来说，什么都不变。</p>
     <p>与其说是敌对的吸血鬼国家，不管其形状如何，在联手这点上甚至有利”</p>
     <p>“<span class="character">你没想过要保护学生吗？</span>”</p>
