--- a/OEBPS/Text/c054.xhtml
+++ b/OEBPS/Text/c054.xhtml
@@ -114,7 +114,7 @@
     <p>如果这个想法正确的话，就必须把迷宫当成两个对手。</p>
     <p>伯恩哈特因为这个疑惑而牵制着贝阿特里克斯帝国。</p>
     <p>当然王家不能问伯恩哈特这件事。</p>
-    <p>“你有迷宫吗？”因为如果被说“我拥有”的话，就会威胁到自己的权威。</p>
+    <p>“<span class="character">你有迷宫吗？</span>”因为如果被说“<span class="character">我拥有</span>”的话，就会威胁到自己的权威。</p>
     <p>所以之前的王，也避开了由于给予伯恩哈特公爵的地位的事留存在己方的同时查明真相的事吧。</p>
     <p>无论对于敌人还是朋友，伯恩哈特的资产来源都是不能打开的潘多拉的盒子。</p>
     <p>……不过，如果是现在的王家吉克林德的话，有坦率地向伯恩哈特询问的恐怖感。</p>
