--- a/OEBPS/Text/c061.xhtml
+++ b/OEBPS/Text/c061.xhtml
@@ -30,7 +30,7 @@
     <p>菲利克斯の問いに隊長と呼ばれている白装束が答えた。</p>
     <p>隊長といえど、所詮は隠密の一部隊の長に過ぎない。</p>
     <p>この作戦の詳細な目的までは知らないのだろう。</p>
-    <p>“ここだけの話、帝国うちは女尊男卑だ。女で王家で王剣を使えるとくりゃあ、まず優遇されると思っていい。</p>
+    <p>“<span class="character">ここだけの話、帝国うちは女尊男卑だ。女で王家で王剣を使えるとくりゃあ、まず優遇されると思っていい。</span></p>
     <p>聞いた話じゃ女だけで子作り出来ないか毎日研究して、それが成功した暁にゃ男は全員国を追い出されるって噂だ。</p>
     <p>ありえねえとは思うが、そんな噂が立つくらいにうちの女帝様は男嫌いで女好きの真性レズビアンだ。</p>
     <p>つーわけでお前さんは国境前で降ろしてやる。国境越えたら最悪殺されるかもしれねえし”</p>
@@ -48,8 +48,8 @@
     <p>ここは馬車であるが、菲利克斯達の逃走防止として狭い個室が用意されている。</p>
     <p>ドアが閉められ、鍵をかけられた。</p>
     <p>脱出出来るような場所はどこにもない。</p>
-    <p>“殿下、聞いてください。逃げる前に殿下の乗っていた魔物に手紙を持たせました。</p>
-    <p>上手くあの魔物がブルートに着けば、すぐに救助隊が組まれるはずです”</p>
+    <p>“<span class="character">殿下、聞いてください。逃げる前に殿下の乗っていた魔物に手紙を持たせました。</span></p>
+    <p><span class="character">上手くあの魔物がブルートに着けば、すぐに救助隊が組まれるはずです</span>”</p>
     <p>“<span class="character">…………</span>”</p>
     <p>菲利克斯は白装束に追われていた時、吉克林德の使っていたギガンティッシュハムスターの口に袋を詰めた。</p>
     <p>あの中には万一の時の為に救助を要請する為の手紙が入っている。</p>
