--- a/OEBPS/Text/c062.xhtml
+++ b/OEBPS/Text/c062.xhtml
@@ -48,8 +48,8 @@
     <p>速度的话火腿助力强。</p>
     <p>但是白衣们冷静地将树木的果实撒在地上。</p>
     <p>于是，火腿助就停了下来，埋头于将树上的果实塞进面袋里。</p>
-    <p>“喂，喂，火腿助！虽然说了要停下来，但是没有说要停！</p>
-    <p>树上的果实等会儿再给，现在就追！”</p>
+    <p>“<span class="character">喂，喂，火腿助！虽然说了要停下来，但是没有说要停！</span></p>
+    <p><span class="character">树上的果实等会儿再给，现在就追！</span>”</p>
     <p>吉克林德的话也算不了什么。</p>
     <p>火腿助一心一意将树上的果实塞到脸颊上，甚至连追赶马车都没有。</p>
     <p>恐怕在他的脑海里已经连马车都没有了吧。</p>
