--- a/OEBPS/Text/c064.xhtml
+++ b/OEBPS/Text/c064.xhtml
@@ -96,15 +96,15 @@
     <p>她比什么都了解她。</p>
     <p>因为那是曾经在同一个校舍里度过的，甚至是看不起对方的人。</p>
     <p>“<span class="character">……汉……那</span>”</p>
-    <p>“诶……你和我在哪里见过吗？</p>
-    <p>汉娜没有注意到紧缩性。</p>
+    <p>“<span class="character">诶……你和我在哪里见过吗？</span></p>
+    <p>汉娜没有注意到弗雷德里克。</p>
     <p>那倒是。现在的他没有以前的面貌。</p>
     <p>完全，看上去只是个老年人吧。</p>
     <p>……如果不注意到那个好。弗雷德里克是这样想的。</p>
     <p>不想让这么悲惨的自己和年轻时的自己联系在一起。</p>
     <p>但是，士兵中的一人因为说了多余的话，即使是一点点的愿望也会被粉碎。</p>
-    <p>“啊，弗雷德里克爷爷。这附近很有名……队长，你认识吗？</p>
-    <p>“<span class="character">紧缩性……弗雷……诶，诶！？</span>”</p>
+    <p>“<span class="character">啊，弗雷德里克爷爷。这附近很有名……队长，你认识吗？</span></p>
+    <p>“<span class="character">弗雷德里克……弗雷……诶，诶！？</span>”</p>
     <p>汉娜听了他的名字，瞪大了眼睛，大吃一惊。</p>
     <p>然后我不记得她说了什么。</p>
     <p>好久不见啦，变了啊……我好像说过那样的话。</p>
@@ -140,8 +140,8 @@
     <p>腰疼，腿颤动，只是站立这样的行为也使用体力。</p>
     <p>尽管如此，我只是讨厌就这样趴着。</p>
     <p>没有这样的屈辱。</p>
-    <p>“快看……总有一天，总有一天要看啊！</p>
-    <p>我将不会就这样结束！我一定要回头看你们！”</p>
+    <p>“<span class="character">快看……总有一天，总有一天要看啊！</span></p>
+    <p><span class="character">我将不会就这样结束！我一定要回头看你们！</span>”</p>
     <p>流着泪水和鼻涕，老人一边撒着唾沫一边大声喊着。</p>
     <p>我知道这是不讲理的叫喊。</p>
     <p>不是对帮忙、伸出手来的人说的话。</p>
