--- a/OEBPS/Text/c065.xhtml
+++ b/OEBPS/Text/c065.xhtml
@@ -43,8 +43,8 @@
     <p>大半の者は多数派の言葉を信じる。そして少数派を切り捨てる。</p>
     <p>つまり弗里德里克を捕獲するにあたって、切り捨てられるような少数派になってはいけないのだ。</p>
     <p>でなければ弗里德里克のみならず、余計な者まで相手にしなくてはいけなくなる。</p>
-    <p>“だが……どうするんだ、梅赛德斯。</p>
-    <p>学園長がまさか、皆の前で自白するなんて事はありえないだろう”</p>
+    <p>“<span class="character">だが……どうするんだ、梅赛德斯。</span></p>
+    <p><span class="character">学園長がまさか、皆の前で自白するなんて事はありえないだろう</span>”</p>
     <p>“<span class="character">……そうだな。確かにあり得ない</span>”</p>
     <p>大勢の前で『儂が売国奴です』などと、そんな自白をするわけがない。それは吉克林德に言われずとも分かっている事だ。</p>
     <p>ならば証拠を出せばいいのだろうが、そんなものは何処にもない。</p>
