--- a/OEBPS/Text/c072.xhtml
+++ b/OEBPS/Text/c072.xhtml
@@ -92,11 +92,11 @@
     <p>汉娜放下菲利克斯，首先朝着房间的入口走去。</p>
     <p>钥匙是从外面挂着的，但是知道那里有监视。</p>
     <p>轻轻敲门，然后边模仿吉克林德的声音边向监视的方向提问。</p>
-    <p>“喂，外面太吵了。到底发生了什么？</p>
+    <p>“<span class="character">喂，外面太吵了。到底发生了什么？</span></p>
     <p>“<span class="character">哈。听说是猪人大群的袭击</span>”</p>
     <p>“<span class="character">哦？到底是从哪里冒出来的呢？</span>”</p>
-    <p>“现在正在调查中。但是您不必担心，公主。</p>
-    <p>像猪人那样不可能到达这里，即使万一变成那样，我们也会保护你的”</p>
+    <p>“<span class="character">现在正在调查中。但是您不必担心，公主。</span></p>
+    <p><span class="character">像猪人那样不可能到达这里，即使万一变成那样，我们也会保护你的</span>”</p>
     <p>汉娜思考着从门那边听到的回答。</p>
     <p>因为在被捕之前先把小兔子当成聊天工具留下来，所以已经知道自己的绑架和犯人很fredelic了吧。</p>
     <p>但是考虑到发生战争的危险等，很难认为军队马上行动。</p>
