--- a/OEBPS/Text/c078.xhtml
+++ b/OEBPS/Text/c078.xhtml
@@ -73,9 +73,9 @@
     <p>听到脚步声就这样渐渐远离，梅赛德斯为了把贝阿列克斯关进迷宫，解冻了迷宫的一间房间。</p>
     <p>首先先解压缩迷宫的一部分，然后按迷宫进行压缩。那样做的话关闭的事成为可能。</p>
     <p>但是在那里，贝阿朵里克斯等了很久。</p>
-    <p>“等一下……带我去，随后送个影武者……你打算怎么处理那里产生的“间”？</p>
-    <p>既然现在不能马上准备影武者，我就会产生失踪的『间』。</p>
-    <p>这样的话，我们的士兵们肯定会怀疑影武者吧”</p>
+    <p>“<span class="character">等一下……带我去，随后送个影武者……你打算怎么处理那里产生的“间”？</span></p>
+    <p><span class="character">既然现在不能马上准备影武者，我就会产生失踪的『间』。</span></p>
+    <p><span class="character">这样的话，我们的士兵们肯定会怀疑影武者吧</span>”</p>
     <p>“<span class="character">……所以，你要留在这里？不值一提</span>”</p>
     <p>“<span class="character">不对。你听着。</span></p>
     <p><span class="character">不用特意准备，如果是你的话，现在就可以准备精度很高的影武者。</span></p>
