--- a/OEBPS/Text/c083.xhtml
+++ b/OEBPS/Text/c083.xhtml
@@ -85,8 +85,8 @@
     <p>話しながらパンを噛み切った。</p>
     <p>硬い。やはりこの国のパンは基本的にスープがないと食べられたものではなかった。</p>
     <p>なので客は自動的に別料金でスープを頼み、店は潤う。</p>
-    <p>“梅赛德斯・格鲁内瓦特様。这个国家的真正国王需要您的才能。</p>
-    <p>どうか我々の同志になって頂きたい”</p>
+    <p>“<span class="character">梅赛德斯・格鲁内瓦特様。这个国家的真正国王需要您的才能。</span></p>
+    <p><span class="character">どうか我々の同志になって頂きたい</span>”</p>
     <p>“<span class="character">…………</span>”</p>
     <p>梅赛德斯は返事をせず、無言でワインを飲んだ。</p>
     <p>話を聞かない事には肯定も否定も出来ない。</p>
