--- a/OEBPS/Text/c101.xhtml
+++ b/OEBPS/Text/c101.xhtml
@@ -53,8 +53,8 @@
     <p>……尖耳朵。</p>
     <p>那是吸血鬼没有的身体特征。</p>
     <p>“<span class="character">精灵吗</span>”</p>
-    <p>“嗯。但是精灵是世界上人数最多的人种，完全不知道是哪里的精灵。</p>
-    <p>照现在这样下去，到底是他一个人的暴走呢，还是精灵方面的策略呢？</p>
+    <p>“<span class="character">嗯。但是精灵是世界上人数最多的人种，完全不知道是哪里的精灵。</span></p>
+    <p><span class="character">照现在这样下去，到底是他一个人的暴走呢，还是精灵方面的策略呢？</span></p>
     <p>“<span class="character">杀了的话不好吃吗？</span>”</p>
     <p>“<span class="character">虽说是结果论，但也许是应该活捉来泄露情报的吧。</span></p>
     <p><span class="character">不过嘛，比起活着逃跑要好得多，那个场面连我也杀了</span>”</p>
