--- a/OEBPS/Text/c102.xhtml
+++ b/OEBPS/Text/c102.xhtml
@@ -51,8 +51,8 @@
     <p>马克斯对梅赛德斯拥有迷宫感到惊讶。</p>
     <p>但是因为没有义务做详细的说明，所以对于他的疑问没有任何答复就忽略了。</p>
     <p>无论是教还是不教，首先要让学生学习常识。</p>
-    <p>“如果有需要的话，通过本凯告诉我。</p>
-    <p>虽然不能说一定要准备，但多少能起到一点通融的作用”</p>
+    <p>“<span class="character">如果有需要的话，通过本凯告诉我。</span></p>
+    <p><span class="character">虽然不能说一定要准备，但多少能起到一点通融的作用</span>”</p>
     <p>只说了这些，梅赛德斯离开了迷宫。</p>
     <p>因为觉得自己再说什么都会警惕，对方也需要沉着的时间。</p>
     <p>如果试着结束了如何也不发呆,不过，可以认为菲利克斯意外的出生判明，迷宫传递到他的手，总觉得正面了吧。</p>
