--- a/OEBPS/Text/c106.xhtml
+++ b/OEBPS/Text/c106.xhtml
@@ -17,7 +17,7 @@
     <p>在这一层里除了梅赛德斯以外，没有看到乘坐着可以飞行的魔物的卡片，恐怕这些人早就已经向前迈进了吧。 在那里苦苦挣扎的人们可以说是起跑失败而落后的伙伴。 梅赛德斯不想进入被留下来的一侧，所以悠然地让高度上升。 于是，在高度达到一定程度的时候，注意到了什么正在接近。</p>
     <p>飞来的企鹅发出了鸡一样的叫声，飞到了空中。 那是什么？ 这样想的话从茨瓦尔夫说明进入。</p>
     <p>“当地识别名毕琼。鸟形的魔物威胁度为D级。 属性是水属性,不过，从口吐火。 虽然外表是那样的，但是遗传基因是鸭子的伙伴。可是我相信皮琼本身就是乌鸦“</p>
-    <p>真是厉害的魔物” 复制件轻易地避开只有突入的地方的魔物的突击，以踢一发无力化做了。 就那样抓住指甲，象确认怎样一样地看梅赛德斯。 “这家伙也接受了捕获的委托，要抓到他吗？” 总之，到底能达成委托就足够了。 把没有意识的皮琼斯收纳在迷宫里，梅赛德斯向更高处走去。</p>
+    <p>真是厉害的魔物” 皮可轻易地避开只有突入的地方的魔物的突击，以踢一发无力化做了。 就那样抓住指甲，象确认怎样一样地看梅赛德斯。 “这家伙也接受了捕获的委托，要抓到他吗？” 总之，到底能达成委托就足够了。 把没有意识的皮琼斯收纳在迷宫里，梅赛德斯向更高处走去。</p>
     <p>于是脚下没有了立足点，那个被认为是终点的地方有门。 打开那个的话又，新的区域等候着。 虽然在天空上是一样的，但这次的立足点像平均台一样狭窄的道路一直延续着，seeker们一边取得平衡一边一点点前进着。</p>
     <p>但是，一条道路如果被其他寻呼车追赶的话可能会被推落，现在也有一个人的寻呼机掉落到地狱里。 “好棒~……啊！” 梅赛德斯默默地观察着落下的标语。 于是，seeker在落下10米左右的地方消失了。 恐怕已经回到了一层了吧。 这次好像不是一层楼下的空间大。</p>
     <p>尽管如此，还是向下进行了调查，知道了什么都没有之后提高了高度。 这里也没有搭乘魔物的seeker。 反正还是二层。这大概就是如果飞行的话能够无条件突破的难易度吧。 马上到达下一扇门，向三层移动。 到了三层果然还是和以前不一样。</p>
