--- a/OEBPS/Text/c111.xhtml
+++ b/OEBPS/Text/c111.xhtml
@@ -26,8 +26,8 @@
     <p>但是那个姑且不论，疑问是疑问。</p>
     <p>为什么会发生被迫近的画面毁坏这样的事呢……。</p>
     <p>那个答案，现在就在这里。</p>
-    <p>“原来如此，原来是这样啊。</p>
-    <p>如果试着明白是简单的事。画面本身，就如字面那样变成墙壁逼近”</p>
+    <p>“<span class="character">原来如此，原来是这样啊。</span></p>
+    <p><span class="character">如果试着明白是简单的事。画面本身，就如字面那样变成墙壁逼近</span>”</p>
     <p>“<span class="character">现在不是冷静地解说的时候吧！？</span>”</p>
     <p>在模仿天空的墙壁慢慢逼近的强制横向滚动的迷宫内，梅赛德斯和莱斯利向前飞去。</p>
     <p>踢散飞向天空的蟑螂，更加梅赛德斯考虑。</p>
@@ -118,8 +118,8 @@
     <p>但是让人在意的是，为什么它会出现在吸血鬼和精灵的国境呢？</p>
     <p>这个迷宫的BOSS为了什么目的在这里出迷宫了……还是，死亡了……。</p>
     <p>不管怎么说，只担心麻烦的事。</p>
-    <p>“那么，到了传送点还有余地。</p>
-    <p>我想先走，怎么办？”</p>
+    <p>“<span class="character">那么，到了传送点还有余地。</span></p>
+    <p><span class="character">我想先走，怎么办？</span>”</p>
     <p>“<span class="character">当然要去啦！</span>”</p>
     <p>“<span class="character">cocacola！</span>”</p>
     <p>面对梅赛德斯的提问，莱斯利和皮琼精神满满的回答，然后两人分头向下一个区域跑去。</p>
