--- a/OEBPS/Text/c112.xhtml
+++ b/OEBPS/Text/c112.xhtml
@@ -22,8 +22,8 @@
     <p>至今为止一直处于不稳定的空中突然一变，（虽说是在船中）脚跟着地面，从心情上来说，也感到安心，警戒好像要松懈了。所以才危险。</p>
     <p>更应该警惕的是船的摇晃。梅赛德斯认为，这并不能保证船不会突然发生太大的摇晃，而是比刚才更危险的区域。</p>
     <p>但是，同行的另一个人似乎并不这么认为。</p>
-    <p>“啊，太好了。下一站是船吗？</p>
-    <p>我一直在飞，不能平静下来，这样可以喘口气了”</p>
+    <p>“<span class="character">啊，太好了。下一站是船吗？</span></p>
+    <p><span class="character">我一直在飞，不能平静下来，这样可以喘口气了</span>”</p>
     <p>莱斯利兴高采烈地和nokoko走去。</p>
     <p>于是，她脚下的地板脱落，倒栽葱式地掉下来。</p>
     <p>“<span class="character">啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊～……</span>”</p>
@@ -89,9 +89,9 @@
     <p>任凭腕力将莱斯利拉上去，莱斯利佩服地看着梅赛德斯的手臂。</p>
     <p>然后毫不客气地触摸，摸自己的手腕进行比较。</p>
     <p>“<span class="character">什么？</span>”</p>
-    <p>“不……吸血鬼果然很有力气啊。</p>
-    <p>直到来到这里都挥舞着巨大的哈尔巴德……用一只手抓住魔物扔出去……。</p>
-    <p>手臂明明比我瘦，却从哪里出来那么大的力量”</p>
+    <p>“<span class="character">不……吸血鬼果然很有力气啊。</span></p>
+    <p><span class="character">直到来到这里都挥舞着巨大的哈尔巴德……用一只手抓住魔物扔出去……。</span></p>
+    <p><span class="character">手臂明明比我瘦，却从哪里出来那么大的力量</span>”</p>
     <p>一般来说，精灵的寿命很长，擅长魔法，但是身体能力和坚固程度并不是那么好。</p>
     <p>相对的，吸血鬼的身体能力和生命力出色，是更加寿命长而且到魔法操纵这样的高水准的全圆人。</p>
     <p>再加上大多身体不适、营养不足，只要喝点血就能治愈，这种体质比较奇怪，综合能力毫无疑问是法鲁什中首屈一指的。</p>
