--- a/OEBPS/Text/c113.xhtml
+++ b/OEBPS/Text/c113.xhtml
@@ -52,8 +52,8 @@
     <p>还能去的话就危险了。</p>
     <p>果然是该退休的时候了。</p>
     <p>“<span class="character">差不多该出去一次了。</span>”</p>
-    <p>“等等。还说没关系。如果勉强的话，还可以再去一层哦。</p>
-    <p>时间也……嗯，一天只过了一半左右”</p>
+    <p>“<span class="character">等等。还说没关系。如果勉强的话，还可以再去一层哦。</span></p>
+    <p><span class="character">时间也……嗯，一天只过了一半左右</span>”</p>
     <p>莱斯利这样说着，把奇怪的东西给梅赛德斯看了。</p>
     <p>那是用链子连接起来的圆盘状工具，里面有十个数字和一根针。</p>
     <p>在理解这个究竟是什么的同时，梅赛德斯情不自禁地抓住了莱斯利的手臂。</p>
@@ -61,8 +61,8 @@
     <p>“<span class="character">诶？</span>”</p>
     <p>梅赛德斯认真的表情多少被气压了吧。</p>
     <p>不知道为什么梅赛德斯这么咬人，莱斯利的视线在游动。</p>
-    <p>“什么……是我制造的，测量时间的工具。</p>
-    <p>把一天分成十个等级，时间一过，针就会动”</p>
+    <p>“<span class="character">什么……是我制造的，测量时间的工具。</span></p>
+    <p><span class="character">把一天分成十个等级，时间一过，针就会动</span>”</p>
     <p>“<span class="character">那也是参考了那本书吗？</span>”</p>
     <p>“<span class="character">算了。嘛，书上写的，花了不知道什么意思的细节</span>”</p>
     <p>看来莱斯利是参考那本书连机械手表都造出来的。</p>
