--- a/OEBPS/Text/c118.xhtml
+++ b/OEBPS/Text/c118.xhtml
@@ -53,9 +53,9 @@
     <p>回想起来，在斯塔克迷宫的时候，两个选择的门前都有门，阿修拉奥加守护着那里。</p>
     <p>也就是说，这里是二选一的门前的地点……如果返回的话，这就是最后一次了。</p>
     <p>如果超越了那扇门，除了选择金色和黑色两种选择之外别无他法。</p>
-    <p>“好容易走到了门的强者们啊。</p>
-    <p>有挑战试炼的力量吗，在这里试一下吧！</p>
-    <p>如果没有挑战的打算的话，还是回去比较好”</p>
+    <p>“<span class="character">好容易走到了门的强者们啊。</span></p>
+    <p><span class="character">有挑战试炼的力量吗，在这里试一下吧！</span></p>
+    <p><span class="character">如果没有挑战的打算的话，还是回去比较好</span>”</p>
     <p>多米尼安说了一件奇妙的亲切话，准备了兰斯。</p>
     <p>在此之前，梅赛德斯也准备了哈尔巴德，后来居上的莱斯利也准备了万能枪。</p>
     <p>看了那个才判断是有战斗的意思吧。多米尼翁展开了大翅膀。</p>
