--- a/OEBPS/Text/c119.xhtml
+++ b/OEBPS/Text/c119.xhtml
@@ -69,12 +69,12 @@
     <p>不知道是为什么，它回到了田野里。</p>
     <p>而且，原本的持有者“继承者”是否是福格拉的王族。</p>
     <p>我想十有八九是王族吧，但是像梅赛德斯那样拥有迷宫却有隐瞒者的可能性也不是零。</p>
-    <p>“为什么要离开继承人的手？</p>
-    <p>……不，这个问题不正确。离开继承人的手等于血断了……也就是说所有拥有所有权的人都死了。</p>
-    <p>在福格拉的国家到底发生了什么？为什么继承人死了？”</p>
-    <p>“对不起，我不能回答那个问题。</p>
-    <p>我也没见过外界。因为有时会被召唤出来，所以多少知道一些外界的事情，但大部分都是在地下城里等待。</p>
-    <p>我也不知道外面发生了什么……只是，注意到的时候我们已经失去了主人”</p>
+    <p>“<span class="character">为什么要离开继承人的手？</span></p>
+    <p><span class="character">……不，这个问题不正确。离开继承人的手等于血断了……也就是说所有拥有所有权的人都死了。</span></p>
+    <p><span class="character">在福格拉的国家到底发生了什么？为什么继承人死了？</span>”</p>
+    <p>“<span class="character">对不起，我不能回答那个问题。</span></p>
+    <p><span class="character">我也没见过外界。因为有时会被召唤出来，所以多少知道一些外界的事情，但大部分都是在地下城里等待。</span></p>
+    <p><span class="character">我也不知道外面发生了什么……只是，注意到的时候我们已经失去了主人</span>”</p>
     <p>嗯，梅赛德斯抱着胳膊。</p>
     <p>确实一直呆在迷宫里的话，是不会知道外面的事情的。</p>
     <p>迷宫的主人在迷宫里呆着就能得到外面的信息。</p>
