--- a/OEBPS/Text/c120.xhtml
+++ b/OEBPS/Text/c120.xhtml
@@ -50,9 +50,9 @@
     <p>正因为如此，当婚约成了泡影的时候，愤怒爆发了，对莱斯利大发雷霆……结果那只会使他的立场越来越坏。</p>
     <p>但是，对于他的内心，莱斯利是不知道的，就算知道了也不允许谩骂。</p>
     <p>她的态度完全是格拉西兰的自作自受，只是理所当然的事情。</p>
-    <p>“……那是什么啊……为什么那么从容呢……。</p>
-    <p>你……你如果没有我的话，什么都做不了，可能会做错什么……。</p>
-    <p>你为什么一副找到了那种居所的表情呢……虽然很奇怪……”</p>
+    <p>“<span class="character">……那是什么啊……为什么那么从容呢……。</span></p>
+    <p><span class="character">你……你如果没有我的话，什么都做不了，可能会做错什么……。</span></p>
+    <p><span class="character">你为什么一副找到了那种居所的表情呢……虽然很奇怪……</span>”</p>
     <p>奇怪的是你。</p>
     <p>周围的人没有说出来，内心是这样想的。</p>
     <p>老实说，我已经厌烦了这种视野狭小，而且还要跟随浅虑的Bon，这是一个可悲的纵向社会。只能保持沉默而不采取态度。</p>
@@ -74,11 +74,11 @@
     <p>莱斯利不知道是什么事情，慌慌张张的。</p>
     <p>尤利娅带来的事是指瑞丽身上有什么危险逼近了吗？</p>
     <p>看来尤利娅顺利完成了命令。</p>
-    <p>“什么，什么！？什么！？离我远一点！</p>
-    <p>我不去不行！我的发明！发明本身就是！”</p>
+    <p>“<span class="character">什么，什么！？什么！？离我远一点！</span></p>
+    <p><span class="character">我不去不行！我的发明！发明本身就是！</span>”</p>
     <p>“<span class="character">……什么情况？</span>”</p>
-    <p>“在精灵的村落里……没想到他把帐篷点上了。</p>
-    <p>然后，她想冲进燃烧的帐篷，所以按照你的命令带了过来”</p>
+    <p>“<span class="character">在精灵的村落里……没想到他把帐篷点上了。</span></p>
+    <p><span class="character">然后，她想冲进燃烧的帐篷，所以按照你的命令带了过来</span>”</p>
     <p>梅赛德斯朝着烟的方向，然后整理情况。</p>
     <p>点燃帐篷的恐怕是格拉西兰吧。也许还有其他名字中以格拉开头的精灵，总之先让格拉西兰暂时放火。</p>
     <p>然后看到了莱斯利慌张的样子，燃烧起来的是莱斯利的帐篷，为了救出发明品打算冲进燃烧的帐篷，尤利娅按照梅赛德斯的命令将其带走。</p>
@@ -94,15 +94,15 @@
     <p>说些安慰的话，然后让莱斯利下台。</p>
     <p>莱斯利似乎还没有从混乱中恢复过来，但稍微平静了些，停止了喧哗。</p>
     <p>梅赛德斯为了尽量不刺激她而选择了语言。</p>
-    <p>“对不起。我是为了以防万一才给你保驾的。</p>
-    <p>从那个叫格拉西恩的家伙那里，感觉到了很容易就越过了一线的危险”</p>
+    <p>“<span class="character">对不起。我是为了以防万一才给你保驾的。</span></p>
+    <p><span class="character">从那个叫格拉西恩的家伙那里，感觉到了很容易就越过了一线的危险</span>”</p>
     <p>一边说话一边用迷宫的力量复制那本书，装作从怀中取出的样子给莱斯利看。</p>
     <p>以那股火势，其他的发明几乎全灭了，但只要有这本书和莱斯利的话，就可以重做。</p>
     <p>莱斯利想要插入火焰，也是为了救出这本书吧。</p>
     <p>果然，看到书的莱斯利像抢一样从梅赛德斯那里拿了书。</p>
     <p>“<span class="character">啊？这个……啊？为什么梅赛德斯有？话说点火的是格拉西兰？</span>”</p>
-    <p>“如果问为什么要带，是因为在帐篷燃烧前为了慎重起见回收了。</p>
-    <p>虽然没有确实放火，但我认为是格拉西兰没错”</p>
+    <p>“<span class="character">如果问为什么要带，是因为在帐篷燃烧前为了慎重起见回收了。</span></p>
+    <p><span class="character">虽然没有确实放火，但我认为是格拉西兰没错</span>”</p>
     <p>“<span class="character">在燃烧之前……这样啊，这个叫尤利娅的人……</span>”</p>
     <p>莱斯利好像误会了尤利娅从帐篷里把书给撤了。</p>
     <p>哎呀，怎么可能想象不出很久前梅赛德斯复印过了呢。</p>
