--- a/OEBPS/Text/c121.xhtml
+++ b/OEBPS/Text/c121.xhtml
@@ -39,8 +39,7 @@
     <p>とはいえショックはショックで、乾いた笑いを浮かべている。</p>
     <p>“<span class="character">あはは……どうしよ……全部燃えちゃった</span>”</p>
     <p>“<span class="character">残っているものはないのか？</span>”</p>
-    <p>“一応、ダンジョン攻略用に持ち歩いてたマスケット銃と、ウォータージェットは無事だけど、後は全滅……あ、でも、弾丸と水の魔石はテントの中だったからマスケット銃とウォータージェットも使えないや……一応、今充填してる分の魔石と弾丸だけはあるけど……”
-    </p>
+    <p>“<span class="character">一応、ダンジョン攻略用に持ち歩いてたマスケット銃と、ウォータージェットは無事だけど、後は全滅……あ、でも、弾丸と水の魔石はテントの中だったからマスケット銃とウォータージェットも使えないや……一応、今充填してる分の魔石と弾丸だけはあるけど……</span>”</p>
     <p>“<span class="character">かろうじて実用的な二つが残ったのは不幸中の幸いか</span>”</p>
     <p>レスリーの発明はほぼ燃えてしまったが、彼女が普段から身に付けているものだけは不幸を免れたようだ。</p>
     <p>だが、他の道具も決して悪かったわけではない。</p>
@@ -65,8 +64,8 @@
     <p>というより、ユリアにあまり複数の命令を出してしまうと、どれかを忘れてしまう可能性が高いし、何が証拠になるかの判別も出来なさそうだ。</p>
     <p>まあ、犯人で確定したならば証拠の有無などは別にいい。何も司法の場に出して正式に裁いてもらおうというのではないのだ。</p>
     <p>ただの害虫処分に万人が認める証拠も証言も必要あるまい。</p>
-    <p>“ほう、レスリーのテントが燃えたのか。ははっ、丁度よかったじゃないか。</p>
-    <p>ゴミを処分する手間が省けたじゃねえか”</p>
+    <p>“<span class="character">ほう、レスリーのテントが燃えたのか。ははっ、丁度よかったじゃないか。</span></p>
+    <p><span class="character">ゴミを処分する手間が省けたじゃねえか</span>”</p>
     <p>“<span class="character">ゴミですって！？</span>”</p>
     <p>“<span class="character">おお、ゴミだろうよ。何に使うのかも分からん鉄屑ばっか造りやがって。燃えちまった方が世の中の為だ</span>”</p>
     <p>グラシアンはレスリーを嘲るように言い、彼女の怒りを煽る。</p>
