--- a/OEBPS/Text/c122.xhtml
+++ b/OEBPS/Text/c122.xhtml
@@ -27,8 +27,8 @@
     <p>而且现在这个村子里有迷宫所有者吉克林德，所以就算不弄得不好，怀疑也会去吉克林德吧。</p>
     <p>所以梅赛德斯决定等一次机会。</p>
     <p>如果她的读法正确的话，应该快来了。</p>
-    <p>“老爷。我确认了从精灵村过来的男子。</p>
-    <p>那个……格勒……嗯……是那个男人的部下之一”</p>
+    <p>“<span class="character">老爷。我确认了从精灵村过来的男子。</span></p>
+    <p><span class="character">那个……格勒……嗯……是那个男人的部下之一</span>”</p>
     <p>“<span class="character">把手脚绑起来活捉，带我到我面前来。</span>”</p>
     <p>“<span class="character">是</span>”</p>
     <p>依莉亚的记忆力依旧有些困难，但她发现了从精灵村落来到这里的人类的存在。</p>
@@ -44,12 +44,12 @@
     <p>所以格拉西恩为了将自己的死亡和失败的可能性变为零而瞄准了鳟鱼枪……这是一件很容易预料到的事情。</p>
     <p>不久，尤利娅带着一个精灵回来，跪在了梅赛德斯。</p>
     <p>旁边有一个手脚被绑住的精灵，看起来是一个很不情愿地跟随格拉西恩的家伙。</p>
-    <p>“那么，马上来回答一下你来干什么吧。</p>
-    <p>答非所问，掉一个指头。沉默了五秒，但还是掉了一个手指。</p>
-    <p>如果掉下来的手指从手脚全部消失的话，就把右眼弄碎。接下来是左眼。</p>
-    <p>除了吐气所需的器官以外，其他器官都会一个一个地崩溃。</p>
-    <p>选择。是通过对主人的道义而无法挽回的姿态呢，还是在没有受伤之前就全部吐出来呢。</p>
-    <p>决断晚了的话只会迟到……”</p>
+    <p>“<span class="character">那么，马上来回答一下你来干什么吧。</span></p>
+    <p><span class="character">答非所问，掉一个指头。沉默了五秒，但还是掉了一个手指。</span></p>
+    <p><span class="character">如果掉下来的手指从手脚全部消失的话，就把右眼弄碎。接下来是左眼。</span></p>
+    <p><span class="character">除了吐气所需的器官以外，其他器官都会一个一个地崩溃。</span></p>
+    <p><span class="character">选择。是通过对主人的道义而无法挽回的姿态呢，还是在没有受伤之前就全部吐出来呢。</span></p>
+    <p><span class="character">决断晚了的话只会迟到……</span>”</p>
     <p>“<span class="character">全部都说。请帮帮我</span>”</p>
     <p>总之，为了打听情报，我试着轻轻地威胁了一下，可是格拉西恩的部下却轻易地投降了。</p>
     <p>因为没有格拉西兰的声望，所以我想如果在手指落地之前就要把根全部拔下来，然后全部呕吐，但好像没有比我预想的还要对格拉西兰的忠诚心。</p>
@@ -69,8 +69,8 @@
     <p>因此，格拉西恩警戒鳟鱼枪是理所当然的事。</p>
     <p>梅赛德斯将手指放在格兰西的部下的头上，故意发出魔力。</p>
     <p>然后像这样指着稍远的墙壁，用不可见的重力魔法给予负荷，打开了洞。</p>
-    <p>“我把魔法禁锢在你的脑袋里。和刚才在墙上打了洞的东西是一样的东西。</p>
-    <p>不管你身在何处，我都会凭我的一个意志破坏我的头脑，直到死亡”</p>
+    <p>“<span class="character">我把魔法禁锢在你的脑袋里。和刚才在墙上打了洞的东西是一样的东西。</span></p>
+    <p><span class="character">不管你身在何处，我都会凭我的一个意志破坏我的头脑，直到死亡</span>”</p>
     <p>当然，这是谎言。</p>
     <p>梅赛德斯做不出那样灵巧的模仿。</p>
     <p>或者说把重力放在脑中的话，在那个时候大脑就会崩溃而死，在那之前首先会被皮肤和头盖骨阻挡。</p>
@@ -78,8 +78,8 @@
     <p>但是，这件事格拉斯的部下是不会明白的。</p>
     <p>因为连重力这个概念都不知道。</p>
     <p>梅赛德斯对脸色苍白的他继续说道。</p>
-    <p>“如果你遵从我的命令，我就解除你脑中的魔法。</p>
-    <p>但是，如果背叛的话会怎么样，你知道吗？”</p>
+    <p>“<span class="character">如果你遵从我的命令，我就解除你脑中的魔法。</span></p>
+    <p><span class="character">但是，如果背叛的话会怎么样，你知道吗？</span>”</p>
     <p>男子无言地浓烈地摇着头。</p>
     <p>“<span class="character">那就好。你接下来该做的事是……</span>”</p>
     <p>然后梅赛德斯向那个男人传达了命令后就放了他。</p>
@@ -110,8 +110,8 @@
     <p>想吃饭的人，今后有饿死的觉悟吗？</p>
     <p>对于知道不会发生的事情，不需要觉悟。</p>
     <p>所以格拉西恩以从容的态度嘲笑了莱斯利。</p>
-    <p>“好像还不知道实力差距。</p>
-    <p>……好，一发。我先给你打一枪”</p>
+    <p>“<span class="character">好像还不知道实力差距。</span></p>
+    <p><span class="character">……好，一发。我先给你打一枪</span>”</p>
     <p>既然这样，就让我们看看莱斯利慌乱绝望的表情吧。</p>
     <p>这样想的格拉西兰，决定故意把先手让给莱斯利。</p>
     <p>依赖的道具在关键时刻不发……要是出了什么事，那家伙一定会绝望的吧。</p>
@@ -136,7 +136,7 @@
     <p>信号的同时，莱斯利拿着枪，格拉西兰从容地站着。</p>
     <p>反正那是空炮。不可能中。</p>
     <p>然后再这样说吧。</p>
-    <p>“好不容易让了先手，却不发，真让人失望”。作为在决斗的场合也没能立起来的无能而笑。</p>
+    <p>“<span class="character">好不容易让了先手，却不发，真让人失望”。作为在决斗的场合也没能立起来的无能而笑。</span></p>
     <p>在格拉西兰面前，莱斯利用手指着扳机——约定的胜利面前浮现出扭曲的笑容。</p>
     <p>——枪声响起，漂亮地射穿了格拉西兰的脚。</p>
 </body>
