--- a/OEBPS/Text/c123.xhtml
+++ b/OEBPS/Text/c123.xhtml
@@ -34,7 +34,7 @@
     <p>疼。只是疼。</p>
     <p>像烧光了脑髓一样的剧痛让人什么都想不出来，格拉西恩只能痛哭流涕。</p>
     <p>但是谁也不去管格拉西恩，是因为还没有评判的人宣布胜败。</p>
-    <p>“到此为止！已确认无误攻击</p>
+    <p>“<span class="character">到此为止！已确认无误攻击</span></p>
     <p>在场的人这么说的同时，周围的救护班向格拉西恩跑去。</p>
     <p>恐怕这是第一次射人吧。</p>
     <p>对于自己做的事，莱斯利有些退色了。</p>
@@ -100,12 +100,12 @@
     <p>“<span class="character">挑战真相的人啊，来了。</span>”</p>
     <p>啊，说话啊。梅赛德斯看着鸟，思考着那样泄气的事情。</p>
     <p>我说的也只是刚开始的守护者而已。</p>
-    <p>“来到这里的人已经不需要多余的语言了。如果追求真相的话，最好显示出力量。</p>
-    <p>但是……如果可以的话”</p>
+    <p>“<span class="character">来到这里的人已经不需要多余的语言了。如果追求真相的话，最好显示出力量。</span></p>
+    <p><span class="character">但是……如果可以的话</span>”</p>
     <p>这么说来，梅赛德斯觉得前面有这样的开场白，有点怀念。</p>
     <p>隔了五年才听说，果然守护者之前不说出来的话是不会罢休的。</p>
-    <p>“我的名字是相尼克斯。掌管灭亡，然后再次诞生的生命循环的人。</p>
-    <p>挑战真实的人啊。你的生命也会因为我的火焰而变成尘埃，然后再次发芽吧”</p>
+    <p>“<span class="character">我的名字是相尼克斯。掌管灭亡，然后再次诞生的生命循环的人。</span></p>
+    <p><span class="character">挑战真实的人啊。你的生命也会因为我的火焰而变成尘埃，然后再次发芽吧</span>”</p>
     <p>“<span class="character">……是吗？</span>”</p>
     <p>以前和帕拉迪斯战斗的时候，我问过是否需要这个开场白。</p>
     <p>当时的回答确实是“不，不需要另外做。”吗。</p>
