--- a/OEBPS/Text/c032.xhtml
+++ b/OEBPS/Text/c032.xhtml
@@ -17,31 +17,31 @@
     <p>迷宫是攻略者的所有物，据说也可以用来继承这血统的人。</p>
     <p>并且能使用迷宫的事是arventroto的正当的继任者的事证明，这个是奥鲁克斯最大的军事力。</p>
     <p>如果失去这个，奥尔克斯的战力会变成一半以下吧。</p>
-    <p>“对了。还没成为国家的无法无天的时代……被称为『最初的八人』的人们攻略了迷宫，各自得到了迷宫的支配权。</p>
-    <p>两个精灵，两个吸血鬼，两个希梅雷，两个佛格拉.</p>
-    <p>他们各自建造了国家，至今仍作为大国繁荣着。这个八音盒也是其中之一。</p>
-    <p>此后，八个国家由于各自有迷宫这个强大的军事力量的事互相牵制互相，那个到今天持续着”</p>
+    <p>“<span class="character">对了。还没成为国家的无法无天的时代……被称为『最初的八人』的人们攻略了迷宫，各自得到了迷宫的支配权。</span></p>
+    <p><span class="character">两个精灵，两个吸血鬼，两个希梅雷，两个佛格拉.</span></p>
+    <p><span class="character">他们各自建造了国家，至今仍作为大国繁荣着。这个八音盒也是其中之一。</span></p>
+    <p><span class="character">此后，八个国家由于各自有迷宫这个强大的军事力量的事互相牵制互相，那个到今天持续着</span>”</p>
     <p>梅赛德斯想，原来的世界就像核武器一样。</p>
     <p>战争以数量取胜是常识，等同于获得无限军力的迷宫用一句话来威胁。</p>
     <p>战斗的话双方都不能平安无事。无论胜负，国家都会被魔物蹂躏吧。</p>
     <p>因此彼此成为抑制力，冰上的对峙勉强持续着。</p>
     <p>“<span class="character">那样的话，王家是不是可以更感兴趣迷宫攻略呢？</span>”</p>
-    <p>“当然是悲愿吧。但是，这可能会导致新王的诞生，并威胁到自己的权力。</p>
-    <p>如果自己能攻略姑且不论，那样的情况不合适是现实”</p>
+    <p>“<span class="character">当然是悲愿吧。但是，这可能会导致新王的诞生，并威胁到自己的权力。</span></p>
+    <p><span class="character">如果自己能攻略姑且不论，那样的情况不合适是现实</span>”</p>
     <p>拥有迷宫的人是王。从得到的那个瞬间开始，住在迷宫的魔物和今后被批量生产的更多的魔物能够无条件的遵从。</p>
     <p>如果拥有这种力量的人出现在王家以外，那么自己的权威就会受到威胁。</p>
     <p>所以，王家虽然渴望迷宫的力量，却无法将攻略交给骑士等，无法揭开真相，只能将情报隐藏起来。</p>
     <p>如果说真心话，应该是想禁止入内……如果做那个从迷宫魔物溢出国家被蹂躏。</p>
     <p>反正，也许有人会侮辱用seeker无法使之真正地清除。</p>
     <p>“<span class="character">是说功能受到限制吧。</span>”</p>
-    <p>“恩。王家的人魔物的量产和使役，条款的量产等也好象可能,不过，那个全部只在洞窟预先登记着的东西。</p>
-    <p>如果是真正的使者，通过新的魔物登陆，可以增加迷宫产生的魔物的种类……如果文献是正确的话”</p>
+    <p>“<span class="character">恩。王家的人魔物的量产和使役，条款的量产等也好象可能,不过，那个全部只在洞窟预先登记着的东西。</span></p>
+    <p><span class="character">如果是真正的使者，通过新的魔物登陆，可以增加迷宫产生的魔物的种类……如果文献是正确的话</span>”</p>
     <p>第一次听说。</p>
     <p>想来梅赛德斯是迷宫的主人，但并不是完全掌握了这个功能。</p>
     <p>梅赛德斯认为，这可能是应该向茨维尔夫询问的详细情况。</p>
-    <p>“不管怎么说，必须避免断绝王家的血统。</p>
-    <p>梅赛德斯，从瞄准影武者生命的辈无论如何也听出信息。</p>
-    <p>如果可以的话，就把他带到宅邸来。”</p>
+    <p>“<span class="character">不管怎么说，必须避免断绝王家的血统。</span></p>
+    <p><span class="character">梅赛德斯，从瞄准影武者生命的辈无论如何也听出信息。</span></p>
+    <p><span class="character">如果可以的话，就把他带到宅邸来。</span>”</p>
     <p>到处都是拷问这个词，果然这个男人也不寻常。</p>
     <p>梅赛德斯轻描淡写地自嘲道，不要搞不清谁是恶徒。</p>
     <p class="divline"></p>
@@ -56,8 +56,8 @@
     <p>迷失方向，继续迷失方向的舒夫，与前几天捕获的阿修塔尔的4人和1只一只。</p>
     <p>也许阿修塔尔也应该给它取个名字。</p>
     <p>顺便一提，克利亚在格鲁内瓦特家看家。</p>
-    <p>“首先，正如主人所知道的那样，封装在万能钥匙上的携带、解冻、压缩等基本功能不是本人，只要继承血液就可以使用。</p>
-    <p>同样也可以使用魔物、道具的量产”</p>
+    <p>“<span class="character">首先，正如主人所知道的那样，封装在万能钥匙上的携带、解冻、压缩等基本功能不是本人，只要继承血液就可以使用。</span></p>
+    <p><span class="character">同样也可以使用魔物、道具的量产</span>”</p>
     <p>到这里梅赛德斯也知道。</p>
     <p>而且光是这个就十分危险。凭借个人的力量摇动了国家。</p>
     <p>“<span class="character">更加攻略者本人这个之外又加上，能做新的登记</span>”</p>
@@ -68,8 +68,8 @@
     <p>而且因为双方都有很高的战斗力，如果增加的话增加的话没有损失。</p>
     <p>但是因为只想批量生产舒夫变得异怪，批量生产还没做。</p>
     <p>“<span class="character">我问，重新注册本凯，会不会增加呢？</span>”</p>
-    <p>“可以。但是本凯比通常的阿修拉奥加成本要高。</p>
-    <p>同时，这个情况是同样的魔物之前的阿修拉奥加被删除”</p>
+    <p>“<span class="character">可以。但是本凯比通常的阿修拉奥加成本要高。</span></p>
+    <p><span class="character">同时，这个情况是同样的魔物之前的阿修拉奥加被删除</span>”</p>
     <p>“<span class="character">嗯</span>”</p>
     <p>梅赛德斯想，这个暂且保留可以吗？</p>
     <p>能增加本凯在战斗力上是魅力,不过，增加只服从自己的本凯后世的吸血鬼也只是困扰吧。</p>
@@ -138,9 +138,9 @@
     <p>・风之魔石3P</p>
     <p>・雷之魔石6P</p>
     <p>・封石12P</p>
-    <p>“之后再看道具。迷宫的扩张等是多久？</p>
-    <p>“支付1P后可以增设1格。1格请想成大概纵，横1m的空间。</p>
-    <p>建筑物根据物品的不同而不同，如果没有任何选项的话，建一栋民居也就10P了”</p>
+    <p>“<span class="character">之后再看道具。迷宫的扩张等是多久？</span></p>
+    <p>“<span class="character">支付1P后可以增设1格。1格请想成大概纵，横1m的空间。</span></p>
+    <p><span class="character">建筑物根据物品的不同而不同，如果没有任何选项的话，建一栋民居也就10P了</span>”</p>
     <p>梅赛德斯认为。</p>
     <p>虽然攻略迷宫的是自己，但是从一开始就不抱这种乐观的态度。</p>
     <p>也许今后也会和同样拥有迷宫的人战斗。</p>
