--- a/OEBPS/Text/c057.xhtml
+++ b/OEBPS/Text/c057.xhtml
@@ -92,8 +92,8 @@
     <p>这幅画让人搞不清谁是后卫。</p>
     <p>……不，这么胖，反正前卫不行吧。</p>
     <p>“<span class="character">但是就算很细，好像也有使用魔法的人？</span>”</p>
-    <p>“听说这个用法很好！不转动到构成身体的人，就那样在体内放入mana的人维持纤细的体形也能增加魔法力哟！</p>
-    <p>但是因为身体里有很多玛娜，实际上比外表稍微重了点！”</p>
+    <p>“<span class="character">听说这个用法很好！不转动到构成身体的人，就那样在体内放入mana的人维持纤细的体形也能增加魔法力哟！</span></p>
+    <p><span class="character">但是因为身体里有很多玛娜，实际上比外表稍微重了点！</span>”</p>
     <p>“<span class="character">这样啊。话说回来，哥布林黑客……</span>”</p>
     <p>梅赛德斯的目光转向了哥布林黑克斯。</p>
     <p>于是他露出一副得意的表情，打开了长袍前。</p>
