--- a/OEBPS/Text/c104.xhtml
+++ b/OEBPS/Text/c104.xhtml
@@ -64,8 +64,8 @@
     <p>于是，留下幼小的外表停止了成长的梅赛德斯显眼吗，周围的seeker象侮辱一样地看了她。</p>
     <p>“<span class="character">喂喂，这样的地方有小鬼。</span>”</p>
     <p>“<span class="character">算了吧，小姐，这里可不是像你这样的孩子来玩的地方。</span>”</p>
-    <p>“哈哈哈，你没见过的小鬼不要回家！妈妈也很担心吧？</p>
-    <p>早点回去让他安心吧！”</p>
+    <p>“<span class="character">哈哈哈，你没见过的小鬼不要回家！妈妈也很担心吧？</span></p>
+    <p><span class="character">早点回去让他安心吧！</span>”</p>
     <p>“<span class="character">你可真会讲道理啊。你这个老太婆，嫁到父母身边学习新娘，嫁给有意义的男人，过着平和的生活吧。在出嫁之前变成伤物是问题吧</span>”</p>
     <p>虽然外表上被侮辱，但总觉得好久没有这样了。</p>
     <p>在学园里，梅赛德斯是名人，大家都避而远之，从某种意义上来说，这是一种新鲜的反应。</p>
