--- a/OEBPS/Text/c122.xhtml
+++ b/OEBPS/Text/c122.xhtml
@@ -136,7 +136,7 @@
     <p>信号的同时，莱斯利拿着枪，格拉西兰从容地站着。</p>
     <p>反正那是空炮。不可能中。</p>
     <p>然后再这样说吧。</p>
-    <p>“<span class="character">好不容易让了先手，却不发，真让人失望”。作为在决斗的场合也没能立起来的无能而笑。</span></p>
+    <p>“好不容易让了先手，却不发，真让人失望”。作为在决斗的场合也没能立起来的无能而笑。</p>
     <p>在格拉西兰面前，莱斯利用手指着扳机——约定的胜利面前浮现出扭曲的笑容。</p>
     <p>——枪声响起，漂亮地射穿了格拉西兰的脚。</p>
 </body>
